[gd_scene load_steps=2 format=2]

[ext_resource path="res://login.gd" type="Script" id=1]

[node name="login" type="Node2D"]
script = ExtResource( 1 )

[node name="HttpPost" type="HTTPRequest" parent="."]

[node name="Button" type="Button" parent="."]
margin_left = 461.0
margin_top = 254.0
margin_right = 545.0
margin_bottom = 300.0
text = "LOGIN"
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="request_completed" from="HttpPost" to="." method="_on_HttpPost_request_completed"]
[connection signal="pressed" from="Button" to="." method="_on_Button_pressed"]
